Fix dat columns alignment bug

--- a/my-css/externit.css
+++ b/my-css/externit.css
@@ -7,6 +7,10 @@ body {
   font-family: 'Varela Round', sans-serif;
 }
 
+.form-row-item {
+  float: right;
+}
+
 .transparent-bg {
   background-image: url("../images/bun-small.jpg");
 	background-repeat: repeat;
